--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
+    "autoprefixer": "^10.0.2",
     "moment": "^2.29.1",
+    "postcss": "^8.0.9",
     "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react-dom": "^16.8.0",
+    "tailwindcss": "^2.2.19"
   },
   "scripts": {
     "start": "react-scripts-ts start",
